# pynamodb-polymorph

./: .gitignore  LICENSE.txt  Pipfile  README.md  setup.cfg  setup.py
src/pynamodb_polymorph/: __init__.py  custom_attr.py  zlib_attr.py
src/pynamodb_polymorph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: models.py  test_serialization.py
