[metadata]
name = pynamodb-polymorph
url = https://github.com/ryansb/pynamodb-polymorph
license = MIT
description = Calculated/copied attributes to support advanced single-table design in DynamoDB
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
packages = find:
zip_safe = true
install_requires =
    pynamodb~=5.0
    ulid-py

[options.packages.find]
exclude = tests
where = src

[options.extras_require]
testing =
    faker
    pytest
    pytest-cov

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = .* build dist .venv
testpaths = tests src/pynamodb_polymorph
addopts = --cov=src/pynamodb_polymorph --cov-report=html

[tool:black]
line-length = 120
target-version = ['py39']
